--- a/style.css
+++ b/style.css
@@ -18,10 +18,24 @@ body {
 }
 
 /* Drawing area */
+
+
+@media (orientation: landscape) {
 #drawing-area {
     display: flex;
-    width: 50%;
-    height: 50%;
-    background-color: gray;
-    border: 2px solid blue;
+    height: 70%;
+    aspect-ratio: 1/1;
+    background-color: whitesmoke;
+    border: 8px solid black;
+}
+}
+
+@media (orientation: portrait) {
+#drawing-area {
+    display: flex;
+    width: 80%;
+    aspect-ratio: 1/1;
+    background-color: whitesmoke;
+    border: 8px solid black;
+}
 }
