--- a/style.css
+++ b/style.css
@@ -71,7 +71,22 @@ body {
     transition: background-color 0.50s ease;
     flex: 1 1 0;
     min-width: 0;
+
+    background: linear-gradient(90deg, rgb(255, 255, 255), rgb(200, 200, 200), rgb(150, 150, 150), rgb(100, 100, 100), rgb(50, 50, 50), rgb(0, 0, 0));
+    background-size: 800% 800%;
+    animation: grayScaleFlow 5s linear infinite alternate;
+    color: black; /* keep text black */
+    transition: transform 0.1s;
 }
+
+    @keyframes grayScaleFlow {
+        0% {
+            background-position: 0% 50%;
+        }
+        100% {
+            background-position: 100% 50%;
+        }
+    }
 
 
 
