--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body {
 #sizing-button {
     aspect-ratio: 2/1;
     margin-bottom: 12px;
-    background-color: lightgreen;
+    background-color: rgb(255, 217, 0);
     transition: background-color 0.50s ease;
     flex: 1 1 0;
     min-width: 0;
@@ -126,7 +126,49 @@ body {
         cursor: pointer;
     }
 
-#sizing-button p, #random-color-button p, #gray-scale-button p {
+#black-brush-button {
+    aspect-ratio: 2/1;
+    margin-bottom: 12px;
+    background-color: gray;
+    flex: 1 1 0;
+    min-width: 0;
+}
+
+    #black-brush-button:hover {
+        transform: scale(1.05);
+        cursor: pointer;
+    }
+
+#save-as-png-button {
+    aspect-ratio: 2/1;
+    margin-bottom: 12px;
+    background-color: rgb(0, 255, 76);
+    transition: background-color 0.50s ease;
+    flex: 1 1 0;
+    min-width: 0;
+
+    background: linear-gradient(90deg, rgb(186, 255, 214), rgb(0, 255, 102));
+    background-size: 800% 800%;
+    animation: grayScaleFlow 5s linear infinite alternate;
+    color: black; /* keep text black */
+    transition: transform 2.25s;
+}
+
+    @keyframes grayScaleFlow {
+        0% {
+            background-position: 0% 50%;
+        }
+        100% {
+            background-position: 100% 50%;
+        }
+    }
+
+    #save-as-png-button:hover {
+        transform: scale(1.05);
+        cursor: pointer;
+    }
+
+#sizing-button p, #random-color-button p, #gray-scale-button p, #black-brush-button p, #save-as-png-button p {
     margin: 0;
     font-size: clamp(14px, 2vw, 32px);
 }
